force-app/main/default/objects/SkillRequirement/fields/Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>Expire_Time__c</fullName>
    <formula>Work_Order__r.Call_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire Time</label>
    <type>DateTime</type>
</CustomField>