force-app/main/default/objects/SkillRequirement/fields/Skill_Call__c.field-meta.xml
<CustomField>
    <fullName>Skill_Call__c</fullName>
    <formula>Skill.MasterLabel = &quot;2nd&quot;
||
Skill.MasterLabel = &quot;AL&quot;
||
Skill.MasterLabel = &quot;Comm&quot;
||
Skill.MasterLabel = &quot;Comm Basic&quot;
||
Skill.MasterLabel = &quot;DO&quot;
||
Skill.MasterLabel = &quot;EP Basic Support&quot;
||
Skill.MasterLabel = &quot;Event Lead&quot;
||
Skill.MasterLabel = &quot;FTNOE&quot;
||
Skill.MasterLabel = &quot;Lead Basic&quot;
||
Skill.MasterLabel = &quot;NOE&quot;
||
Skill.MasterLabel = &quot;Passdown&quot;
||
Skill.MasterLabel = &quot;PCE Lead&quot;
||
Skill.MasterLabel = &quot;Polling&quot;
||
Skill.MasterLabel = &quot;RT Commline&quot;
||
Skill.MasterLabel = &quot;Senior Lead&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill - Call</label>
    <type>Checkbox</type>
</CustomField>