force-app/main/default/objects/SkillRequirement/fields/Skill_Duty__c.field-meta.xml
<CustomField>
    <fullName>Skill_Duty__c</fullName>
    <formula>Skill.MasterLabel = &quot;Call Setup&quot;
||
Skill.MasterLabel = &quot;Email Core&quot;
||
Skill.MasterLabel = &quot;ES Core&quot;
||
Skill.MasterLabel = &quot;Legal Core&quot;
||
Skill.MasterLabel = &quot;Mgmt Cover&quot;
||
Skill.MasterLabel = &quot;OBS Core&quot;
||
Skill.MasterLabel = &quot;Parked&quot;
||
Skill.MasterLabel = &quot;Provisioning&quot;
||
Skill.MasterLabel = &quot;Res Core&quot;
||
Skill.MasterLabel = &quot;Skype Help Core&quot;
||
Skill.MasterLabel = &quot;Stray&quot;
||
Skill.MasterLabel = &quot;Tier 1 Core&quot;
||
Skill.MasterLabel = &quot;Tier 2 Core&quot;
||
Skill.MasterLabel = &quot;Tier 2 Tickets&quot;
||
Skill.MasterLabel = &quot;Traffic&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill - Duty</label>
    <type>Checkbox</type>
</CustomField>